# genai-taskq

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS  copilot-instructions.md  pull_request_template.md
.github/workflows/: ci.yml  nightly.yml  release.yml  security.yml
docs/: architecture.md
docs/specs/: F-01.md
scripts/dev/: bootstrap_launchd.sh  com.genaitaskq.autostart.plist.template  preflight_ports.sh
src/genai_taskq/api/: app.py  schemas.py
src/genai_taskq/cli/: main.py
src/genai_taskq/core/: models.py  state_machine.py
src/genai_taskq/mcp/: server.py
src/genai_taskq/observability/: logging.py  metrics.py  tracing.py
src/genai_taskq/providers/: anthropic.py  base.py  llama_cpp.py  mock.py  ollama.py  openai_compatible.py  registry.py
src/genai_taskq/sdk/: __init__.py  client.py
src/genai_taskq/storage/: db.py  init_db.py  repository.py  tables.py
src/genai_taskq/worker/: main.py
tests/e2e/: test_api_submit.py
tests/integration/: test_task_repository.py
tests/unit/: test_docker_autostart_scripts.py  test_state_machine.py
